<resources>
    <string name="app_name">Iosched16</string>


    <!-- Shown in the 'About' window of the app. -->
    <string name="about_main"><![CDATA[
        <b>Google I/O 2016</b><br>
        Version %s
    ]]></string>

    <!-- Shown as a link in the About screen of the app; user can click to see the Terms of Services. -->
    <string name="about_terms">Terms of Service</string>

    <!-- Shown as a link in the About screen of the app; user can click to see the Privacy Policy. -->
    <string name="about_privacy_policy">Privacy Policy</string>

    <!-- Shown as a link in the About screen of the app; user can click to see the EULA. -->
    <string name="about_eula">End User License Agreement</string>

    <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
    <string name="about_licenses">Open Source Licenses</string>
    <string name="ok">OK</string>
    <string name="navdrawer_description_a11y">Navigation Menu</string>
    <string name="close_and_go_back">Close and go back</string>
</resources>
