<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.android.iosched16.about.AboutActivity">

    <!--Main layout-->

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroud">
        <!--        app:shadowDrawable="@drawable/header_shadow"-->


        <LinearLayout
            android:id="@+id/about_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/about_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:paddingBottom="@dimen/element_spacing_normal"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:paddingTop="@dimen/spacing_normal"
                android:textSize="@dimen/text_size_medium"
                tools:text="@string/about_main" />

            <TextView
                android:id="@+id/about_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?attr/listPreferredItemHeight"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/about_terms"
                style="@style/AboutLink"/>

            <TextView
                android:id="@+id/about_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?android:listPreferredItemHeightSmall"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/about_privacy_policy"
                style="@style/AboutLink" />

            <TextView
                android:id="@+id/about_licenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?android:listPreferredItemHeightSmall"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/about_licenses"
                style="@style/AboutLink"
                android:layout_weight="0.03" />

            <TextView
                android:id="@+id/about_eula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?android:listPreferredItemHeightSmall"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/about_eula"
                style="@style/AboutLink" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/headerbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            style="@style/HeaderBar">

            <include layout="@layout/toolbar"/>

        </LinearLayout>

    </FrameLayout>

    <include layout="@layout/navigation_view"/>


</android.support.v4.widget.DrawerLayout>
